footer section added

--- a/index.html
+++ b/index.html
@@ -162,10 +162,32 @@
                 </div>
             </div>
         </div>
+        <div class="downloadCv">
+             <button class="downloadButton"><i class="fa-solid fa-download dowSym"></i>Download CV</button>
+        </div>
     </section>
-
-
-
     </main>
+    <!-- footer -->
+    <footer>
+        <div class="footerContant defaultPadding">
+            <div class="footerChild">
+                <h3 class="footerTitle">Lets Connect</h3>
+                <p class="footerDes">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <div>
+                    <a href=""><img src="./img/icons/facebook.png" alt="facebook" class="icon"></a>
+                    <a href=""><img src="./img/icons/twitter.png" alt="twitter" class="icon"></a>
+                    <a href=""><img src="./img/icons/insta.png" alt="instagram"></a>
+                </div>
+            </div>
+            <div class="footerChild">
+                <h3 class="footerTitle">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea type="message" name="" id="" placeholder="Message" cols="30" rows="10"></textarea>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
